Added custom resource finders.  This is an extensibility point that will allow you to consolidate javascript that is not in either static .js files or embedded resources.

--- a/src/AlmWitt.Web.ResourceManagement.UnitTests/AlmWitt.Web.ResourceManagement.UnitTests.csproj
+++ b/src/AlmWitt.Web.ResourceManagement.UnitTests/AlmWitt.Web.ResourceManagement.UnitTests.csproj
@@ -63,11 +63,13 @@
     <Compile Include="TestCachingResourceCollector.cs" />
     <Compile Include="TestCompositeResourceFilter.cs" />
     <Compile Include="TestConsolidatedResource.cs" />
+    <Compile Include="TestCustomFinderElement.cs" />
     <Compile Include="TestEmbeddedResource.cs" />
     <Compile Include="TestEmbeddedResourceFinder.cs" />
     <Compile Include="TestObjects\StubRequestContext.cs" />
     <Compile Include="TestObjects\StubResourceCollector.cs" />
     <Compile Include="TestObjects\StubResourceFinder.cs" />
+    <Compile Include="TestObjects\StubResourceFinderFactory.cs" />
     <Compile Include="TestObjects\TempDirectoryManager.cs" />
     <Compile Include="TestObjects\StubResource.cs" />
     <Compile Include="TestResource.cs" />
