--- a/src/AlmWitt.Web.ResourceManagement/AlmWitt.Web.ResourceManagement.csproj
+++ b/src/AlmWitt.Web.ResourceManagement/AlmWitt.Web.ResourceManagement.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3A84EC12-7997-417E-AE49-CB7ADFB06B8A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -61,6 +61,8 @@
     <Compile Include="Configuration\ConfigurationHelper.cs" />
     <Compile Include="Configuration\CssGroupElement.cs" />
     <Compile Include="Configuration\CssGroupElementCollection.cs" />
+    <Compile Include="Configuration\CustomFinderElement.cs" />
+    <Compile Include="Configuration\CustomFinderElementCollection.cs" />
     <Compile Include="Configuration\ResourceGroupElement.cs" />
     <Compile Include="Configuration\ResourceGroupElementCollection.cs" />
     <Compile Include="Configuration\ResourceMatchElement.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="Controls\ClientScriptInclude.cs" />
     <Compile Include="Controls\CssInclude.cs" />
     <Compile Include="Controls\WebResourceInclude.cs" />
+    <Compile Include="IResourceFinderFactory.cs" />
     <Compile Include="IResourceIncluderFactory.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="WebForms\ScriptManagerResolver.cs" />
