Updated the website project sample

--- a/samples/AspNet-WebSiteProject/Website/Web.Config
+++ b/samples/AspNet-WebSiteProject/Website/Web.Config
@@ -11,26 +11,7 @@
 	<configSections>
 		<section name="almWitt.web.resourceManagement" type="AlmWitt.Web.ResourceManagement.Configuration.ResourceManagementConfiguration, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
 	</configSections>
-	<almWitt.web.resourceManagement consolidate="true">
-		<clientScripts compress="true">
-			<group consolidatedUrl="~/default.js">
-				<exclude>
-					<add pattern="/Secondary"/>
-					<add pattern="/ExcludedScript.js"/>
-					<!--<add pattern="assembly://TestWebLib/"/>-->
-				</exclude>
-			</group>
-			<group consolidatedUrl="~/secondary.js">
-        <include>
-          <add pattern="/Script1.js"/>
-          <add pattern="/Secondary1.js"/>
-        </include>
-			</group>
-		</clientScripts>
-		<assemblies>
-			<add name="TestWebLib"/>
-		</assemblies>
-	</almWitt.web.resourceManagement>
+  <almWitt.web.resourceManagement configSource="ResourceManagement.config"/>
 	<appSettings/>
 	<connectionStrings/>
 	<system.web>
