Part one of fixing the repository that got pretty messed up in the conversion to HG.

--- a/src/ResourceManagement.Spark.UnitTests/ResourceManagement.Spark.UnitTests.csproj
+++ b/src/ResourceManagement.Spark.UnitTests/ResourceManagement.Spark.UnitTests.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>AlmWitt.Web.ResourceManagement.Spark.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -94,10 +98,6 @@
     <Compile Include="TestSupport\AssertionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ResourceManagement.Spark\ResourceManagement.Spark.csproj">
-      <Project>{FE4C215A-9FFC-4475-9DCC-ACAAA80C2F1F}</Project>
-      <Name>ResourceManagement.Spark</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ResourceManagement\ResourceManagement.csproj">
       <Project>{3A84EC12-7997-417E-AE49-CB7ADFB06B8A}</Project>
       <Name>ResourceManagement</Name>
