Part 5 of N fixing the repository: Got all projects compiling and passing all unit tests.  Fixed namespaces.

--- a/src/ResourceManagement.Less/ResourceManagement.Less.csproj
+++ b/src/ResourceManagement.Less/ResourceManagement.Less.csproj
@@ -52,9 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LessResource.cs" />
-    <Compile Include="LessResourceFinder.cs" />
-    <Compile Include="LessResourceFinderFactory.cs" />
+    <Compile Include="LessContentFilter.cs" />
+    <Compile Include="LessContentFilterFactory.cs" />
+    <Compile Include="LessResourceManagementPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
