Updated the LessIntegration sample project

--- a/samples/LessIntegration/ResourceManagement.config
+++ b/samples/LessIntegration/ResourceManagement.config
@@ -8,7 +8,7 @@
       </include>
     </group>
   </cssFiles>
-  <customResourceFinders>
-    <add factory="AlmWitt.Web.ResourceManagement.Less.LessResourceFinderFactory, AlmWitt.Web.ResourceManagement.Less, Version=1.0.0.0, Culture=neutral" />
-  </customResourceFinders>
+  <plugins>
+    <add type="AlmWitt.Web.ResourceManagement.Less.LessResourceManagementPlugin, AlmWitt.Web.ResourceManagement.Less, Version=1.0.0.0, Culture=neutral" />
+  </plugins>
 </almWitt.web.resourceManagement>
