--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="TestPluginElement.cs" />
     <Compile Include="TestResourceHttpHandler.cs" />
     <Compile Include="TestResourceManagementContext.cs" />
+    <Compile Include="TestResourceType.cs" />
     <Compile Include="TestSupport\AssertionExtensions.cs" />
     <Compile Include="TestSupport\StubPlugin.cs" />
     <Compile Include="TestSupport\StubRequestContext.cs" />
