--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Registration\TestGenericResourceRegistryAccessor.cs" />
     <Compile Include="TestClientScriptGroupElementCollection.cs" />
     <Compile Include="TestCompositeResourceFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
