--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -83,6 +83,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Registration\TestConsolidatingResourceRegistry.cs" />
+    <Compile Include="Registration\TestConsolidatingResourceRegistryAccessor.cs" />
     <Compile Include="Registration\TestGenericResourceRegistryAccessor.cs" />
     <Compile Include="TestClientScriptGroupElementCollection.cs" />
     <Compile Include="TestCompositeResourceFinder.cs" />
