--- a/samples/Mvc-WebAppProject/Website/Web.config
+++ b/samples/Mvc-WebAppProject/Website/Web.config
@@ -135,6 +135,8 @@
       <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
+      <add verb="GET,HEAD" path="*.jsx" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.cssx" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
     </httpHandlers>
 
     <httpModules>
@@ -189,6 +191,8 @@
            type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       <add name="UrlRoutingHandler" preCondition="integratedMode" verb="*" path="UrlRouting.axd" type="System.Web.HttpForbiddenHandler, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      <add name="ConsolidatedJavascriptHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.jsx" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.cssx" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
     </handlers>
   </system.webServer>
 
