--- a/samples/Mvc-WebAppProject/Website/Website.csproj
+++ b/samples/Mvc-WebAppProject/Website/Website.csproj
@@ -79,6 +79,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <None Include="Views\Home\Index.spark" />
+    <Content Include="Views\bindings.xml" />
     <Content Include="Views\Home\Index.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
