Refactored the script and style rendering code.  Began creating web based integration tests.

--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Registration\ReadableExtensions.cs" />
     <Compile Include="Registration\ResourceRegistryExtensions.cs" />
     <Compile Include="Registration\ResourceRegistryMap.cs" />
+    <Compile Include="Registration\ResourceRegistryRenderer.cs" />
     <Compile Include="Registration\TextWriterExtensions.cs" />
     <Compile Include="ResourceCollectionExtensions.cs" />
     <Compile Include="ResourceGroupTemplateCollection.cs" />
