--- a/samples/Mvc-WebAppProject/Website/ResourceManagement.config
+++ b/samples/Mvc-WebAppProject/Website/ResourceManagement.config
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0"?>
 <almWitt.web.resourceManagement>
   <clientScripts>
-    <group consolidatedUrl="~/Scripts/Consolidated/Shared.js">
+    <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
       <include>
-        <add pattern="~/Scripts/.+" />
-        <add pattern="~/Views/Shared/.+" />
+        <add pattern="~/Scripts/jquery-.+\.min\.js" />
+        <add pattern="~/Scripts/jquery.+\.min\.js" />
       </include>
+    </group>
+    <group consolidatedUrl="~/Scripts/Consolidated/Shared/Microsoft.js">
+      <include>
+        <add pattern="~/Scripts/^Microsoft.+\.js$" />
+      </include>
+      <exclude>
+        <add pattern="\.debug\.js$" />
+      </exclude>
     </group>
     <group consolidatedUrl="~/Scripts/Consolidated/Controllers/{controller}.js">
       <include>
