--- a/src/ResourceManagement.Mvc/ResourceManagement.Mvc.csproj
+++ b/src/ResourceManagement.Mvc/ResourceManagement.Mvc.csproj
@@ -45,9 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Html\AjaxHelperExtensions.cs" />
     <Compile Include="Html\HtmlHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TagBuilderExtensions.cs" />
+    <Compile Include="ResourceIncludeResolver.cs" />
+    <Compile Include="ViewContextExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ResourceManagement\ResourceManagement.csproj">
