--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="TestConsolidatedResource.cs" />
     <Compile Include="TestContentFilterMap.cs" />
     <Compile Include="TestCustomFinderElement.cs" />
+    <Compile Include="TestDependencyManager.cs" />
     <Compile Include="TestEmbeddedResource.cs" />
     <Compile Include="TestEmbeddedResourceFinder.cs" />
     <Compile Include="TestPluginElement.cs" />
