Finished unit test for DependencyResolvingResourceRegistry...now I just need to hook it up.

--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="TestResourceManagementContext.cs" />
     <Compile Include="TestResourceType.cs" />
     <Compile Include="TestSupport\AssertionExtensions.cs" />
+    <Compile Include="TestSupport\StubDependencyProvider.cs" />
     <Compile Include="TestSupport\StubPlugin.cs" />
     <Compile Include="TestSupport\StubRequestContext.cs" />
     <Compile Include="TestSupport\StubResourceFinder.cs" />
