--- a/samples/Mvc-WebAppProject/Website/ResourceManagement.config
+++ b/samples/Mvc-WebAppProject/Website/ResourceManagement.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0"?>
-<almWitt.web.resourceManagement>
+<almWitt.web.resourceManagement manageDependencies="true">
   <clientScripts>
     <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
       <include>
