--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -113,9 +113,13 @@
     <Compile Include="ContentFiltering\NullContentFilter.cs" />
     <Compile Include="Configuration\DefaultConfigLoader.cs" />
     <Compile Include="Configuration\IConfigLoader.cs" />
+    <Compile Include="HttpDependencyCache.cs" />
     <Compile Include="DependencyManager.cs" />
+    <Compile Include="DependencyManagerFactory.cs" />
+    <Compile Include="IDependencyCache.cs" />
     <Compile Include="IDependencyProvider.cs" />
     <Compile Include="IContentFilterFactory.cs" />
+    <Compile Include="InMemoryDependencyCache.cs" />
     <Compile Include="IO\IFileFinder.cs" />
     <Compile Include="IResourceFinderFactory.cs" />
     <Compile Include="IResourceGroup.cs" />
