--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -90,19 +90,22 @@
     <Compile Include="Configuration\ClientScriptGroupElementCollection.cs" />
     <Compile Include="Configuration\ConfigurationHelper.cs" />
     <Compile Include="Configuration\ConsolidatedUrlTemplate.cs" />
+    <Compile Include="Configuration\CssFilesConfigurationElement.cs" />
     <Compile Include="Configuration\CssGroupElement.cs" />
     <Compile Include="Configuration\CssGroupElementCollection.cs" />
-    <Compile Include="Configuration\CustomFinderElement.cs" />
-    <Compile Include="Configuration\CustomFinderElementCollection.cs" />
+    <Compile Include="Configuration\InclusionRedirectElement.cs" />
+    <Compile Include="Configuration\InclusionRedirectElementCollection.cs" />
     <Compile Include="Configuration\IResourceManagementPlugin.cs" />
     <Compile Include="Configuration\MappedConfigLoader.cs" />
     <Compile Include="Configuration\PluginElement.cs" />
     <Compile Include="Configuration\PluginElementCollection.cs" />
+    <Compile Include="Configuration\PropertyNames.cs" />
     <Compile Include="Configuration\ResourceGroupElement.cs" />
     <Compile Include="Configuration\ResourceGroupElementCollection.cs" />
     <Compile Include="Configuration\ResourceManagementContext.cs" />
     <Compile Include="Configuration\ResourceMatchElement.cs" />
     <Compile Include="Configuration\ResourceMatchElementCollection.cs" />
+    <Compile Include="Configuration\ClientScriptsConfigurationElement.cs" />
     <Compile Include="Configuration\UrlType.cs" />
     <Compile Include="BuildSupport\PreConsolidateCommand.cs" />
     <Compile Include="ConsolidatedResource.cs" />
