Fixed a bug introduced with the path attribute.

--- a/samples/Mvc-WebAppProject/Website/Web.config
+++ b/samples/Mvc-WebAppProject/Website/Web.config
@@ -22,7 +22,7 @@
         </sectionGroup>
       </sectionGroup>
     </sectionGroup>
-    <section name="almWitt.web.resourceManagement" type="AlmWitt.Web.ResourceManagement.Configuration.ResourceManagementConfiguration, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+    <section name="almWitt.web.resourceManagement" type="AlmWitt.Web.ResourceManagement.Configuration.ResourceManagementConfiguration, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral" restartOnExternalChanges="true"/>
   </configSections>
 
   <appSettings/>
