--- a/samples/Mvc-WebAppProject/Website/ResourceManagement.config
+++ b/samples/Mvc-WebAppProject/Website/ResourceManagement.config
@@ -3,8 +3,8 @@
   <clientScripts>
     <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
       <include>
-        <add pattern="~/Scripts/jquery-.+\.min\.js" />
-        <add pattern="~/Scripts/jquery.+\.min\.js" />
+        <add path="~/Scripts/jquery-1.4.1.min.js" mode="Release" />
+        <add path="~/Scripts/jquery-1.4.1.js" mode="Debug" />
       </include>
     </group>
     <group consolidatedUrl="~/Scripts/Consolidated/Shared/Microsoft.js">
