Added functionality to prevent scripts/stylesheets that are included in multiple registries from being rendered more than once on the page.

--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -112,6 +112,7 @@
     <Compile Include="ContentFiltering\NullContentFilter.cs" />
     <Compile Include="Configuration\DefaultConfigLoader.cs" />
     <Compile Include="Configuration\IConfigLoader.cs" />
+    <Compile Include="HttpContextUtils.cs" />
     <Compile Include="HttpDependencyCache.cs" />
     <Compile Include="DependencyManager.cs" />
     <Compile Include="DependencyManagerFactory.cs" />
@@ -131,15 +132,20 @@
     <Compile Include="Registration\DependencyResolvingResourceRegistry.cs" />
     <Compile Include="Registration\GenericResourceRegistry.cs" />
     <Compile Include="Registration\GenericResourceRegistryAccessor.cs" />
+    <Compile Include="Registration\IIncludeOrderingStrategy.cs" />
     <Compile Include="Registration\IReadableResourceRegistry.cs" />
+    <Compile Include="Registration\IRegistryRenderingContext.cs" />
     <Compile Include="Registration\IResourceRegistryAccessor.cs" />
     <Compile Include="IResourceMatch.cs" />
     <Compile Include="NullContentFilterFactory.cs" />
     <Compile Include="RegexResourceMatch.cs" />
     <Compile Include="Registration\NullResourceRegistry.cs" />
+    <Compile Include="Registration\OrderingStategyContext.cs" />
     <Compile Include="Registration\ReadableExtensions.cs" />
+    <Compile Include="Registration\RegistryRenderingContext.cs" />
     <Compile Include="Registration\ResourceRegistryExtensions.cs" />
     <Compile Include="Registration\ResourceRegistryMap.cs" />
+    <Compile Include="Registration\ResourceRegistryConfiguration.cs" />
     <Compile Include="Registration\ResourceRegistryRenderer.cs" />
     <Compile Include="Registration\TextWriterExtensions.cs" />
     <Compile Include="ResourceCollectionExtensions.cs" />
