--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -132,17 +132,17 @@
     <Compile Include="Registration\DependencyResolvingResourceRegistry.cs" />
     <Compile Include="Registration\GenericResourceRegistry.cs" />
     <Compile Include="Registration\GenericResourceRegistryAccessor.cs" />
-    <Compile Include="Registration\IIncludeOrderingStrategy.cs" />
     <Compile Include="Registration\IReadableResourceRegistry.cs" />
     <Compile Include="Registration\IRegistryRenderingContext.cs" />
     <Compile Include="Registration\IResourceRegistryAccessor.cs" />
     <Compile Include="IResourceMatch.cs" />
     <Compile Include="NullContentFilterFactory.cs" />
     <Compile Include="RegexResourceMatch.cs" />
+    <Compile Include="Registration\IResourceWriter.cs" />
     <Compile Include="Registration\NullResourceRegistry.cs" />
     <Compile Include="Registration\OrderingStategyContext.cs" />
     <Compile Include="Registration\ReadableExtensions.cs" />
-    <Compile Include="Registration\RegistryRenderingContext.cs" />
+    <Compile Include="Registration\RegisteredResources.cs" />
     <Compile Include="Registration\ResourceRegistryExtensions.cs" />
     <Compile Include="Registration\ResourceRegistryMap.cs" />
     <Compile Include="Registration\ResourceRegistryConfiguration.cs" />
