Removed some dead code.  Fixed some namespaces.

--- a/samples/AspNet-WebSiteProject/Website/Web.Config
+++ b/samples/AspNet-WebSiteProject/Website/Web.Config
@@ -69,7 +69,7 @@
         -->
 		<pages>
 			<controls>
-				<add tagPrefix="resource" namespace="AlmWitt.Web.ResourceManagement.WebForms" assembly="AlmWitt.Web.ResourceManagement"/>
+				<add tagPrefix="resource" namespace="AlmWitt.Web.ResourceManagement.Registration.WebForms" assembly="AlmWitt.Web.ResourceManagement"/>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></controls>
 		</pages>
